# GraphAPIQuery_rev4

./: .env.example  .gitignore  Instructions  README.md  main.py  pyproject.toml  web_server.py
.MemoryBank/: productContext.md  progress.md  projectbrief.md  systemPatterns.md  taskContext.md  techContext.md  use_scenarios.md
.MemoryBank/reference/: microsoft_graph_api.md
.clinerules/: design_guideline.md
.clinerules/workflows/: timeline.md
adapters/: __init__.py  factory.py  logger.py
adapters/cli/: __init__.py  account_commands.py  auth_commands.py  db_commands.py
adapters/db/: __init__.py  cache_repository.py  database.py  models.py  repositories.py
adapters/web/: __init__.py  auth_routes.py
config/: __init__.py  adapters.py
core/: __init__.py
core/domain/: __init__.py  entities.py  ports.py
core/usecases/: __init__.py  account_management.py  authentication.py  mail_processing.py
docs/: ARCHITECTURE.md  AUTHENTICATION_GUIDE.md  AUTHENTICATION_SETUP_GUIDE.md  DATABASE_INDEXES.md  DATABASE_RELATIONSHIPS.md  USECASE_ACCOUNT_REGISTRATION.md
scripts/: aliases.sh
